docs/core/v0.20/_sources/reference/tmlt/core/transformations/base/index.rst.txt



***********
base
***********

.. py:module:: tmlt.core.transformations.base

.. autoapi-nested-parse::

   Base class for transformations.











Classes
=======

.. list-table::

   * - :class:`.Transformation`
     - Abstract base class for transformations.

   
.. py:class:: Transformation(input_domain, input_metric, output_domain, output_metric)

   Bases: :class:`tmlt.core.utils.format.Formattable`, :class:`abc.ABC`

   Abstract base class for transformations.






   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.


   .. py:method:: __call__(data)
      :abstractmethod:


      Perform transformation.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.






